# wsd-scan-receiver

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-compose.yml.example  pyproject.toml
examples/: wsd-probe.xml
native/: epsonscan2_push_ready.cpp
src/wsd_scan_receiver/: __init__.py  admin.py  config.py  discovery.py  epson.py  epsonscan2_bridge.py  logging_config.py  main.py  post_processing.py  receiver.py  scan_defaults.json  soap.py  ws_scan_client.py
tests/: helpers.py  test_admin.py  test_config.py  test_discovery.py  test_epson.py  test_epsonscan2_bridge.py  test_post_processing.py  test_receiver.py  test_soap.py  test_ws_scan_client.py
