[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wsd-scan-receiver"
version = "0.1.0"
description = "Self-hosted WSD/WS-Scan push receiver for network scanners"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "nico" }]
dependencies = []

[project.scripts]
wsd-scan-receiver = "wsd_scan_receiver.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wsd_scan_receiver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
